alignment fixed

--- a/force-app/main/default/lwc/employee/employee.css
+++ b/force-app/main/default/lwc/employee/employee.css
@@ -405,7 +405,6 @@
     text-align: left;
 }
 .active-status {
-    margin-top: 24px;
     width: 100px;
     line-height: 25px;
 }
